--- a/main.html
+++ b/main.html
@@ -9,6 +9,58 @@
 </head>
 <body>
     <!-- add table here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Player Stats</title>
+</head>
+<body>
+  <table>
+    <thead>
+      <tr>
+        <th>Player</th>
+        <th>Kills</th>
+        <th>Deaths</th>
+        <th>Assists</th>
+        <th>Revives</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Player 1</td>
+        <td>5</td>
+        <td>2</td>
+        <td>3</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>Player 2</td>
+        <td>8</td>
+        <td>1</td>
+        <td>4</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>Player 3</td>
+        <td>3</td>
+        <td>5</td>
+        <td>2</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>Player 4</td>
+        <td>6</td>
+        <td>3</td>
+        <td>1</td>
+        <td>3</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+</html>
 
         
 </body>
